# Glitch

./: CMakeLists.txt  README.md  create_gif.py  run.sh
Input/: input.txt  training_input.txt
Source/: CommandLineOptions.h  CommandLineParser.hpp  FuzzingOperations.cpp  FuzzingOperations.h  MarkovFuzzing.cpp  MarkovFuzzing.h  Random.hpp  RandomFunction.cpp  RandomFunction.h  main.cpp
Source/backup/: MKV.cpp  MKV.h  MTX.cpp  MTX.h  NN.cpp  NN.h  cvt.cpp  cvt.h  fuzzing_operations.cpp  fuzzing_operations.h  main.cpp  markov.cpp  parser.cpp  parser.h
